003: Wrapping fix.

--- a/styles.css
+++ b/styles.css
@@ -124,7 +124,7 @@ td {
     color: #000;
     border: none;
     word-wrap: break-word;
-    white-space: pre;
+    white-space: pre-wrap;
 }
 
 .finish-button {
